--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "next": "15.0.3",
     "react": "^17.0.0 || ^18.0.0",
@@ -24,9 +25,9 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "prettier": "^3.3.3"
+    "typescript": "^5"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
