--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^6.1.7",
     "next": "15.0.3",
     "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
