--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "@reduxjs/toolkit": "^2.3.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
