--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^17.0.0 || ^18.0.0",
     "@reduxjs/toolkit": "^2.3.0",
     "react-redux": "^9.1.2",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
